# EVERTims-RaytracingClient

./: .gitignore
evert/: CMakeLists.txt  evertConfig.cmake
evert/include/: elAABB.h  elDefs.h  elMaterial.h  elPolygon.h  elRay.h  elRoom.h
evert/src/: elBSP.h  elBeam.h  elListener.h  elMaterial.cc  elOrientedPoint.cc  elOrientedPoint.h  elPathSolution.cc  elPathSolution.h  elPolygon.cc  elRay.cc  elRoom.cc  elRoom.h  elSource.h  elVector.cc  elVector.h  material.h
evertims/: CMakeLists.txt
evertims/include/: socket.h  writer.h
evertims/src/: main.cc  reader.cc  socket.cc  solver.cc  writer.cc
evertims/src/OSC/: OSC-client.c
libevert/src/: elDefs.h
